--- a/google-ai-hackathon-app/tsconfig.json
+++ b/google-ai-hackathon-app/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/Dropdown/ContentTypeDropdowntsx"],
   "exclude": ["node_modules"]
 }
