--- a/google-ai-hackathon-app/package.json
+++ b/google-ai-hackathon-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/zen-kaku-gothic-antique": "^5.0.19",
     "next": "14.2.2",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
