--- a/google-ai-hackathon-app/package.json
+++ b/google-ai-hackathon-app/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@fontsource/zen-kaku-gothic-antique": "^5.0.19",
+    "@google-cloud/storage": "^7.10.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "uuidv7": "^0.6.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
