--- a/google-ai-hackathon-app/package.json
+++ b/google-ai-hackathon-app/package.json
@@ -12,9 +12,12 @@
     "@fontsource/zen-kaku-gothic-antique": "^5.0.19",
     "@google-cloud/storage": "^7.10.1",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "node-postgres": "^0.6.2",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/pg": "^8.11.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
