--- a/google-ai-hackathon-app/tsconfig.json
+++ b/google-ai-hackathon-app/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "target": "es2017",
+    "target": "es2017",
+    "target": "es2017",
+    "target": "es2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
