--- a/google-ai-hackathon-app/package.json
+++ b/google-ai-hackathon-app/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fontsource/zen-kaku-gothic-antique": "^5.0.19",
     "@google-cloud/storage": "^7.10.1",
+    "@google-cloud/vertexai": "^1.1.0",
+    "@google/generative-ai": "^0.8.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "next": "14.2.2",
