--- a/google-ai-hackathon-app/package.json
+++ b/google-ai-hackathon-app/package.json
@@ -16,7 +16,7 @@
     "googleapis": "^135.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
-    "next": "14.2.2",
+    "next": "^13.5.6",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "node-postgres": "^0.6.2",
@@ -34,7 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "13.4.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
