--- a/google-ai-hackathon-app/tsconfig.json
+++ b/google-ai-hackathon-app/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "target": "es2017",
-    "target": "es2017",
-    "target": "es2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -22,9 +23,22 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*": [
+        "./*"
+      ]
+    },
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/Dropdown/ContentTypeDropdowntsx", "app/api/auth/[...next].js", "app/api/auth/[...nextauth].js"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/components/Dropdown/ContentTypeDropdowntsx",
+    "app/api/auth/[...next].js",
+    "app/api/auth/[...nextauth].js"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
